--- a/public/assets/front/style.css
+++ b/public/assets/front/style.css
@@ -9,6 +9,7 @@
 body {
     font-family: 'Roboto-Light';
     margin: 0;
+    padding: 0 3px;
 }
 
 h3 {
@@ -18,74 +19,71 @@ h3 {
 .tel-status {
     border: 10px solid green;
     background: rgb(132, 189, 132);
-    height: 50px;
+    height: 80px;
     font-size: large;
 }
-/* ------X-Small devices (portrait phones, less than 576px)------ */
-/* @media (max-width: 575px) { */
-    header {
-        width: 100%;
-        /* height: 120px; */
-        background: #424242;
-        color: white;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        align-items: flex-start;
-    }
+header {
+    width: 100%;
+    background: #424242;
+    color: white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-start;
+}
 
-    header > div {
-        flex: 1 25%;
-        height: 60px;
-    }
+header > div {
+    flex: 1 25%;
+    height: 60px;
+}
 
-    header .logo img {
-        width: 167px;
-        height: auto;
-    }
+header .logo img {
+    width: 167px;
+    height: auto;
+}
 
-    header nav {
-       flex: 1 340px; 
-    }
-    header ul.menu {
-        list-style-type: none;
-        padding-left: 0%;
-        margin-left: 0;
-        display: flex;
-        justify-content: center;
+header nav {
+    flex: 1 340px; 
+}
+header ul.menu {
+    list-style-type: none;
+    padding-left: 0%;
+    margin-left: 0;
+    display: flex;
+    justify-content: center;
 
-    }
-    header ul.menu li {
-        flex: 1;
-        text-align: center;
-    }
-    header ul.menu a {
-        text-decoration: none;
-        color: white;
-    }
-    
-    header .phones {
-        margin: 10px;
-        text-align: right;
-    }
-    header .phones > img {
-        width: 30px;
-        height: 30px;
-        margin: 5px 6px;
-    }
-    header .phones > ul {
-        list-style-type: none;
-        padding-left: 0%;
-        margin-left: 0%;
-        margin: 0;
+}
+header ul.menu li {
+    flex: 1;
+    text-align: center;
+}
+header ul.menu a {
+    text-decoration: none;
+    color: white;
+}
 
-        float: right;
-    }
-    header a {
-        text-decoration: none;
-        color: white;
-    }
-/* } */
+ .phones {
+    margin: 10px;
+    text-align: right;
+    font-size: larger;
+}
+ .phones > img {
+    width: 30px;
+    height: 30px;
+    margin: 5px 6px;
+}
+ .phones > ul {
+    list-style-type: none;
+    padding-left: 0%;
+    margin-left: 0%;
+    margin: 0;
+
+    float: right;
+}
+header a, footer a {
+    text-decoration: none;
+    color: white;
+}
 
 main .article-name {
     background: center / cover url('../images/doroga.png');
@@ -103,7 +101,7 @@ main .article-brands{
     padding-top: 10px;
 }
 main .article-brands img{
-    max-width: 170px;
+    max-width: 250px;
 }
 main .article-image {
     text-align: center;
@@ -116,6 +114,56 @@ article ul {
     margin-top: 5px;
 }
 
+.client-form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: flex-start;
+    margin: 5px 0;
+}
+.client-form p {
+    margin: 5px 0;
+}
+.client-form input {
+    border-radius: 5px;
+}
+.client-form input[type="tel"]{
+    border: 3px solid #929292;
+    height: 20pt;
+    font-size: larger;
+}
+.client-form input[type="submit"]{
+    border: 3px solid #929292;
+    padding: 0;
+    width: 50pt;
+    height: 26pt;
+    font-size: larger;
+}
+footer {
+    background: #424242;
+    color: white;
+    padding: 3px;
+    margin-top: 10px;
+}
+footer .phones {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: flex-start;
+
+    margin-left: 0;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: center;
+}
+.container p {
+    margin: 0;
+}
+
 /* ------X-Small devices (portrait phones, less than 576px)------ */
 @media (max-width: 575px) { 
     main .article-name h1 {
@@ -123,11 +171,19 @@ article ul {
     }
     main .article-brands img{
         width: 50px;
+        max-height: 250px;
     }
+
 }
 /* Большие девайсы (десктопы, >= 992px) */
 @media (min-width: 992px) {
+    .container-2 {
+        margin: 0 0;
+    }
     main .article-image img {
         width: 50%;
+    }
+    footer .phones {
+        justify-content: space-between;
     }
 }
